# memnix

./: .gitignore  Cargo.toml  Readme.md  TODO.txt  Todo.md  out.dot  wakatime.nu
docs/: coloring.md  mir.md  random_ast.txt  random_notes.txt  random_notes_hash_cycle_resolving.txt
docs/random_scribbles/: ast_edge_cases.txt  eval_caching.txt  eval_caching_plan.md  obj_hashing.txt  obj_hashing2.txt
examples/: bug1_nested_let.nix  bug2_wrong_root.nix  flake.nix  memoizable.nix  minimal_eval.nix  nested_lambda_eval.nix  odd_even.nix  second_order.nix  simple_mir.nix  unnested_lambdas_eval.nix
src/: main.rs  object_hash.rs
src/arena/: debug.rs  debug_with.rs  mod.rs
src/arena/lazy_arena/: debug.rs  mod.rs
src/ast_wrapper/: mod.rs
src/coloring/: algorithm.rs  colorable_impl.rs  graph.rs  mod.rs
src/coloring/expr/: mod.rs  root_node.rs
src/eval/: call_lambda.rs  callstack.rs  error.rs  mod.rs
src/eval/builtins/: get_param.rs  mod.rs
src/eval/hash/: mod.rs
src/eval/memoization/: cache.rs  cache_trait.rs  mod.rs  runtime_value_record.rs
src/eval/value/: mod.rs  number.rs  thunk.rs
src/generic_lang/: lambda.rs  lambda_call.rs  mod.rs  with_expr_type.rs
src/mir/: bin_expr.rs  builtins.rs  error.rs  expr.rs  expression.rs  ident.rs  if_else.rs  intrinsics.rs  lambda.rs  lambda_call.rs  lazy_eval.rs  let_in.rs  literal.rs  mir_expr_arena.rs  mod.rs  root_node.rs  symbol_resolver.rs
src/mir/builtins/: builtin_lambda.rs  intrinsics.rs  mod.rs
src/mir/ident_resolver/: lazy_eval.rs  mod.rs  resolvers.rs  (+1 more)
src/object_hash/: color_impl.rs  graph.rs  mod.rs
(+18 files in other folders)
