[package]
name = "memnix"
version = "0.1.0"
edition = "2024"

[dependencies]
rnix = "0.14.0"
rowan = "0.16.1"

clap = { version = "4.6.1", features = ["derive"] }
ordered-float = "5.3.0"
generativity = "1.2.1"

thiserror = "2.0.18"
getset = "0.1.6"
strum = { version = "0.28.0", features = ["derive"] }
